// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions list renders correctly 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "defaultSort": true,
        "isLeftAligned": true,
        "isSortable": true,
        "key": "date",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "fees",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer_name",
        "label": "Customer",
      },
      Object {
        "key": "customer_email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "customer_country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "risk_level",
        "label": "Risk level",
        "visible": false,
      },
      Object {
        "cellClassName": "deposit",
        "key": "deposit",
        "label": "Deposit",
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          />,
          "value": "txn_j23jda9JJa",
        },
        Object {
          "display": "Jan 2, 2020 / 12:46PM",
          "value": "2020-01-02 17:46:02",
        },
        Object {
          "display": "Refund",
          "value": "refund",
        },
        Object {
          "display": "$10.00",
          "value": 10,
        },
        Object {
          "display": "$-0.50",
          "value": 0.5,
        },
        Object {
          "display": "$9.50",
          "value": 9.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 123,
                "url": "https://example.com/order/123",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <span
            className="payment-method__brand payment-method__brand--visa"
          />,
          "value": "visa",
        },
        Object {
          "display": "Another customer",
          "value": "Another customer",
        },
        Object {
          "display": "another@customer.com",
          "value": "another@customer.com",
        },
        Object {
          "display": "US",
          "value": "US",
        },
        Object {
          "display": <RiskLevel
            risk={0}
          />,
          "value": 0,
        },
        Object {
          "display": <Deposit
            depositId={null}
          />,
          "value": null,
        },
      ],
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": "Jan 4, 2020 / 11:22PM",
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": "Charge",
          "value": "charge",
        },
        Object {
          "display": "$15.00",
          "value": 15,
        },
        Object {
          "display": "$-0.50",
          "value": 0.5,
        },
        Object {
          "display": "$14.50",
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <span
            className="payment-method__brand payment-method__brand--mastercard"
          />,
          "value": "mastercard",
        },
        Object {
          "display": "My name",
          "value": "My name",
        },
        Object {
          "display": "a@b.com",
          "value": "a@b.com",
        },
        Object {
          "display": "US",
          "value": "US",
        },
        Object {
          "display": <RiskLevel
            risk={2}
          />,
          "value": 2,
        },
        Object {
          "display": <Deposit
            dateAvailable="2020-01-07 00:00:00"
            depositId="po_mock"
          />,
          "value": "po_mock",
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "10",
      },
      Object {
        "label": "total",
        "value": "$10.00",
      },
      Object {
        "label": "fees",
        "value": "$1.00",
      },
      Object {
        "label": "net",
        "value": "$9.00",
      },
    ]
  }
  title="Transactions"
  totalRows={10}
/>
`;

exports[`Transactions list renders correctly when filtered to deposit 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "defaultSort": true,
        "isLeftAligned": true,
        "isSortable": true,
        "key": "date",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "fees",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "isSortable": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer_name",
        "label": "Customer",
      },
      Object {
        "key": "customer_email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "customer_country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "risk_level",
        "label": "Risk level",
        "visible": false,
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": "Jan 4, 2020 / 11:22PM",
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": "Charge",
          "value": "charge",
        },
        Object {
          "display": "$15.00",
          "value": 15,
        },
        Object {
          "display": "$-0.50",
          "value": 0.5,
        },
        Object {
          "display": "$14.50",
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <span
            className="payment-method__brand payment-method__brand--mastercard"
          />,
          "value": "mastercard",
        },
        Object {
          "display": "My name",
          "value": "My name",
        },
        Object {
          "display": "a@b.com",
          "value": "a@b.com",
        },
        Object {
          "display": "US",
          "value": "US",
        },
        Object {
          "display": <RiskLevel
            risk={2}
          />,
          "value": 2,
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "3",
      },
      Object {
        "label": "total",
        "value": "$3.00",
      },
      Object {
        "label": "fees",
        "value": "$0.30",
      },
      Object {
        "label": "net",
        "value": "$2.70",
      },
    ]
  }
  title="Deposit transactions"
  totalRows={3}
/>
`;
